--- a/aplicação/mobile/doar_project_flutter_app/pubspec.yaml
+++ b/aplicação/mobile/doar_project_flutter_app/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  # Persist data with SQLite
+  sqflite: ^2.0.0+3
+  path_provider: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
