--- a/flutter_app/doar_app/pubspec.yaml
+++ b/flutter_app/doar_app/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   # Persist data with SQLite
   sqflite: ^2.0.0+3
   path_provider: ^2.0.1
-
+  flutter_signin_button: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
