--- a/flutter_app/doar_app/pubspec.yaml
+++ b/flutter_app/doar_app/pubspec.yaml
@@ -18,7 +18,19 @@ dependencies:
   firebase_auth: ^1.1.2
   firebase_core: ^1.1.0
   firebase_database: ^7.0.0-dev.0
+  firebase_storage: ^8.0.5
+  firebase_messaging: ^9.1.3
+  cloud_firestore: ^1.0.7
+  intl: ^0.17.0
+  image_picker: ^0.7.4
+  photo_view: ^0.11.1
+  cached_network_image: ^3.0.0
+  shared_preferences: ^2.0.5
+  fluttertoast: ^8.0.6
+  flutter_local_notifications: ^5.0.0+3
   flutter_native_splash: ^1.1.8+4
+  flutter_facebook_login: ^3.0.0
+  google_sign_in: ^5.0.2
 
 dev_dependencies:
   flutter_test:
