--- a/flutter_app/doar_app/pubspec.yaml
+++ b/flutter_app/doar_app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   sqflite: ^2.0.0+3
   path_provider: ^2.0.1
   cupertino_icons: ^1.0.2
+  firebase: ^9.0.1
   flutter_signin_button: ^2.0.0
   firebase_auth: ^1.1.2
   firebase_core: ^1.1.0
