--- a/flutter_app/doar_app/pubspec.yaml
+++ b/flutter_app/doar_app/pubspec.yaml
@@ -11,12 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   sqflite: ^2.0.0+3
-  path: ^1.8.0
-  path_provider: ^2.0.1
+  provider: ^5.0.0
   shared_preferences: ^2.0.5
   cupertino_icons: ^1.0.2
-  firebase: ^9.0.1
   flutter_signin_button: ^2.0.0
   firebase_auth: ^1.1.2
   firebase_core: ^1.1.0
@@ -24,7 +24,9 @@ dependencies:
   firebase_storage: ^8.0.5
   firebase_messaging: ^9.1.3
   cloud_firestore: ^1.0.7
+  cached_network_image: ^3.0.0
   image_picker: ^0.7.4
+  photo_view: ^0.11.1
 
 dev_dependencies:
   flutter_test:
