--- a/flutter_app/doar_app/pubspec.yaml
+++ b/flutter_app/doar_app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cached_network_image: ^3.0.0
   image_picker: ^0.7.4
   photo_view: ^0.11.1
+  random_string: ^2.2.0-nullsafety
 
 dev_dependencies:
   flutter_test:
