atualização de dependencias no readme

--- a/Mobile/doar-app/package.json
+++ b/Mobile/doar-app/package.json
@@ -4,7 +4,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start",
+    "start": "web",
     "expo": "expo start"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.1",
+    "expo-cli": "^4.4.4",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
