--- a/Mobile/doar-app/package.json
+++ b/Mobile/doar-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^11.4.1",
     "@react-native-firebase/auth": "^11.4.1",
+    "@react-native-picker/picker": "^1.16.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.1",
@@ -23,6 +24,7 @@
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.8.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
