--- a/Mobile/doar-app/package.json
+++ b/Mobile/doar-app/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "uniqid": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
